Fix(faction): Resolve LazyInitializationException and compilation errors
- Changed List collections to Set in Faction entity to fix a
  MultipleBagFetchException.
- Excluded lazy-loaded collections from equals and hashCode methods
  in the Faction entity to prevent LazyInitializationException.
- Updated test files to reflect the change from List to Set, resolving
  compilation errors.